fixed alignment of booklist component

--- a/src/app/borrower/book-list/book-list.component.css
+++ b/src/app/borrower/book-list/book-list.component.css
@@ -4,6 +4,7 @@
     text-align: center;
     padding-left: 30%;
     padding-right: 30%;
+    margin-top: 70px;
 }
 .showInput {
     display: block;
